--- a/templates/add_profile.html
+++ b/templates/add_profile.html
@@ -2,21 +2,33 @@
 <html>
    <head>
       <title>Add Profile</title>
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
    </head>
    <body>
-      <h3>Profile form</h3>
-      <form action="/add" method="POST">
-         <label>First Name</label>
-         <input type="text" name="first_name" placeholder="first name...">
-         <label>Last Name</label>
-         <input type="text" name= "last_name" placeholder="last name...">
-         <label>Age</label>
-         <input type="number" name="age" placeholder="age..">
-         <label>School</label>
-         <input type="text" name="school" placeholder="School..">
-         <label>Sex</label>
-         <input type="text" name="sex" placeholder="Sex..">
-         <button type="submit">Add</button>
-      </form>
+      <div class = "container" style = "margin-top:10%">
+         <h3 class="text-center">Contact Form</h3>
+         <form action="/add" method="POST" >
+            <div class = "form-group">
+               <label>First Name</label>
+               <input class="form-control" type="text" name="first_name" placeholder="First Name...">
+            </div>
+            <div class = "form-group">
+               <label>Last Name</label>
+               <input class="form-control" type="text" name= "last_name" placeholder="Last Name...">
+               </div>
+            <div class = "form-group">
+               <label>Party Size</label>
+               <input class="form-control" type="text" name="party_size" placeholder="Party Size..">
+               </div>
+            <div class = "form-group">
+               <label>Phone Number</label>
+               <input class="form-control" type="text" name="phone_number" placeholder="Phone Number..">
+            </div>
+            <button type="submit" class="btn btn-primary btn-lg btn-block">Add</button>
+         </form>
+      </div>
+      <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
    </body>
 </html>
