--- a/templates/index.html
+++ b/templates/index.html
@@ -1,31 +1,71 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>Index Page</title>
+      <title>Jacky's Restaurant</title>
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
    </head>
    <body>
-      <h3>Profiles</h3>
-      <a href="/add_data">ADD</a>
-      <br>
-      <table>
+   <div class="container">
+      <h1>Walkin Queue</h1>
+      <a href="{{ url_for('add_data') }}">Get a number!</a>
+      {% if profiles%}
+      <table class=table>
          <thead>
-            <th>Id</th>
-            <th>First Name</th>
-            <th>Last Name</th>
-            <th>Age</th>
-            <th>#</th>
+         <tr>
+            <th scope="col">Party Size</th>
+            <th scope="col">Serving Capacity</th>
+            <th scope="col">Current Flow</th>
+            <th scope="col">Estimate Waiting Time</th>
+         </tr>
          </thead>
-         {% for data in profiles %}
+         {% for i in range(4) %}
          <tbody>
-            <td>{{data.id}}</td>
-            <td>{{data.first_name}}</td>
-            <td>{{data.last_name}}</td>
-            <td>{{data.age}}</td>
-            <td>{{data.school}}</td>
-            <td>{{data.sex}}</td>
-            <td><a href="/delete/{{data.id}}" type="button">Delete</a></td>
+         <tr>
+            <th scope="row">{{ i }}</th>
+            {%if i == 1%}
+            <td>5</td>
+
+            {%elif i == 2%}
+            <td>5</td>
+
+            {%elif i == 3%}
+            <td>3</td>
+
+            {%elif i == 4%}
+            <td>2</td>
+            {%endif%}
+            <td>{{ party_size[i] }}</td>
+            <td>{{ estimate_waiting[i] }}</td>
+         </tr>
          </tbody>
-         {% endfor%}
+         {%endfor%}
       </table>
+      {%endif%}
+      <!--         <a href="/add_data">ADD</a>-->
+      <!--         <br>-->
+      <!--         <table>-->
+      <!--            <thead>-->
+      <!--               <th>Id</th>-->
+      <!--               <th>First Name</th>-->
+      <!--               <th>Last Name</th>-->
+      <!--               <th>Age</th>-->
+      <!--               <th>#</th>-->
+      <!--            </thead>-->
+      <!--            {% for data in profiles %}-->
+      <!--            <tbody>-->
+      <!--               <td>{{data.id}}</td>-->
+      <!--               <td>{{data.first_name}}</td>-->
+      <!--               <td>{{data.last_name}}</td>-->
+      <!--               <td>{{data.age}}</td>-->
+      <!--               <td>{{data.school}}</td>-->
+      <!--               <td>{{data.sex}}</td>-->
+      <!--               <td><a href="/delete/{{data.id}}" type="button">Delete</a></td>-->
+      <!--            </tbody>-->
+      <!--            {% endfor%}-->
+      <!--         </table>-->
+   </div>
+   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
    </body>
 </html>
